- #6993 Fix issues with prefences UI
- #6992 UI issues and use cases
- #7000 Additional UI tweaks
- #7005 Fix User is not able to connect to server using ipv6 without wrapping IP in square quotes
- #7009 Clipboard sharing doesn't work on Linux system
- #7010 Fix Ubuntu 16.04 pipeline in Azure
- #7011 Fix language synchronisation checkbox spelling

Enhancements:
- #6954 Move language selection to advanced section
- #6959 Update synergy UI. Setup wizard
- #6969 Update synergy UI. Validation for aliases.
- #6973 Update synergy UI. Main window
- #6977 Update synergy UI. Configure server
- #6978 Update synergy UI. Settings window
- #6981 | #6987 | #6988 | #6996 Update synergy UI. Setup client configuration
- #6984 Update synergy UI. Client error messages
- #6962 | #6965 Add macOS 10.13 builder
- #6990 Change VersionChecker URL and include system language in the header
- #6999 Detect if Linux is running with Wayland, and display a warning message
- #7003 Prioritization rules server config
- #7004 Add openssl dependency for rpm
- #7008 Add logging when hostname have several IP
===========

v1.13.1-stable
===========
Bug fixes:
- #6900 Remaining SonarCloud reported bug items
- #6903 Save global settings
- #6889 Systray Icon on Ubuntu Auto Start (take 2)
- #6907 Saving configuration on apply
- #6934 Text on welcome screen on macOS is shown without spaces
- #6920 Windows Installer checksums
- #6921 Handling pre-main window creation status notifications
- #6922 macOS CI build
- #6927 Text copied and pasted between Windows and Mac OS converts to japanese
- #6936 Application loses settings
- #6939 Update pipelines to use correct credentials
- #6942 All the text in all the windows should have the same font and size
- #6944 Systray icon is incorrect for macOS Big Sur
- #6941 The application doesn't recognize old settings
- #6945 Fix build for Raspberry Pi
- #6946 Add build stage to filename
- #6950 Synergy client doesn't save the server address when rebooted